# poetry-demo

./: LICENSE  README.md  pyproject.toml  setup.cfg
mylib/: __init__.py  setup.cfg
poetry_demo/: __init__.py
tests/: test_poetry_demo.py
