[tool.poetry]
name = "poetry-demo"
version = "0.0.1"
description = ""
authors = ["cnuss"]
packages = [
    { include = "mylib", from = "." },
    { include = "poetry_demo", from = "." },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.27.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1"
pytest = "^7.1.2"

[tool.poetry.scripts]
poetry-demo = "poetry_demo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
